--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,9 @@
                 <div class='col-6'>
                     <nav class='desk-nav-items-wrap d-flex flex-row align-items-center justify-content-end gap-5 my-auto h-100'>
                         <a class='nav-item' href='projects.html'>Projects</a>
-                        <a class='nav-item' href='#about'>About</a>
-                        <a class='nav-item' href='#services'>Services</a>
-                        <a class='nav-item' href='#contact'>Contact</a>
+                        <a class='nav-item' href='/index.html#about'>About</a>
+                        <a class='nav-item' href='/index.html#services'>Services</a>
+                        <a class='nav-item' href='/index.html#contact'>Contact</a>
                     </nav>
                 </div>
             </div>
