--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                     <p class="tab-btn" onclick="switchTab(event, 'brandTab')">Brand</p>
                                     <p class="tab-btn" onclick="switchTab(event, 'socialTab')">Social</p>
                                 </div>
-                                <a href="#" class="btn btn-primary">Discuss Your Project</a>
+                                <a href="#contact" class="btn btn-primary">Discuss Your Project</a>
                             </div>
                         </div>
                     </div>
@@ -289,11 +289,11 @@
             <div class="row pb-3">
                 <div class="col-md-6 mt-auto">
                     <div class="social-icon-wrap">
-                        <a href="#"><img src="/images/FACEBOOK.svg" alt="Facebook" class="img-fluid" /></a>
-                        <a href="#"><img src="/images/TWITTER.svg" alt="Twitter" class="img-fluid" /></a>
-                        <a href="#"><img src="/images/INSTA.svg" alt="Instagram" class="img-fluid" /></a>
-                        <a href="#"><img src="/images/GITHUB.svg" alt="Github" class="img-fluid" /></a>
-                        <a href="#"><img src="/images/YOUTUBE.svg" alt="Youtube" class="img-fluid" /></a>
+                        <a href="https://www.facebook.com/mhd.zaid.5/" target="_blank"><img src="/images/FACEBOOK.svg" alt="Facebook" class="img-fluid" /></a>
+                        <a href="https://x.com/hash_tag_zaid" target="_blank"><img src="/images/TWITTER.svg" alt="Twitter" class="img-fluid" /></a>
+                        <a href="https://www.instagram.com/hash_tag_zaid/?hl=en" target="_blank"><img src="/images/INSTA.svg" alt="Instagram" class="img-fluid" /></a>
+                        <a href="https://github.com/allaboutzaid" target="_blank"><img src="/images/GITHUB.svg" alt="Github" class="img-fluid" /></a>
+                        <a href="https://www.youtube.com/@mohammadzaid05" target="_blank"><img src="/images/YOUTUBE.svg" alt="Youtube" class="img-fluid" /></a>
                     </div>
                 </div>
                 <div class="col-md-6 text-md-end">
