--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <div class='container header-wrap'>
             <div class='row py-3'>
-                <div class='col-6 my-auto'>
+                <div class='col-4 col-md-6 my-auto'>
                     <a href="index.html"><img src="/images/Shark-logo.png" class='name-logo img-fluid' alt="Logo" /></a>
                 </div>
-                <div class='col-6'>
+                <div class='col-4 col-md-6'>
                     <nav class='desk-nav-items-wrap d-flex flex-row align-items-center justify-content-end gap-5 my-auto h-100'>
                         <a class='nav-item' href='projects.html'>Projects</a>
                         <a class='nav-item' href='#about'>About</a>
